fix: layout issues

--- a/bundle.css
+++ b/bundle.css
@@ -102,6 +102,10 @@ header .header-image img {
   padding: 10px;
 }
 
+.article {
+  padding: 0 10px;
+}
+
 @media screen and (min-width: 768px) {
   body {
     display: flex;
